--- a/examples/QAOA_portfolio_optimization.ipynb
+++ b/examples/QAOA_portfolio_optimization.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c3de09e7-5315-4170-8263-6041a7819fac",
    "metadata": {
     "tags": []
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "57544f68-6538-4dda-a47b-254252caa54a",
    "metadata": {
     "tags": []
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e49f9152-e49c-4cbd-a2b3-20894a927a9a",
    "metadata": {
     "tags": []
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a800d2c6-d7a9-449a-befc-e1620676847e",
    "metadata": {
     "tags": []
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "60942736-20e4-4519-a584-65f613b7bddf",
    "metadata": {
     "tags": []
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c4cb1e0a-f0eb-48e4-a1dc-8d342462c156",
    "metadata": {
     "tags": []
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1fa46296-89cb-40e7-aaf8-09b708eda12d",
    "metadata": {
     "tags": []
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4bb70cb8-db79-45b3-b808-96b7d6647b68",
    "metadata": {
     "tags": []
@@ -158,20 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "238479eb-db75-4e19-a159-36a2bed9c2ae",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "energy = 0.004962484517944697, Approximation ratio = 0.7564585339722991\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "po_energy = qaoa_obj(x0).real\n",
     "po_ar = (po_energy-best_portfolio[1])/(best_portfolio[0]-best_portfolio[1])\n",
@@ -185,12 +177,14 @@
    "source": [
     "# Optimize QAOA parameters\n",
     "\n",
-    "Note that we are using NLopt for optimization as it supports better-performing BOBYQA optimizer. Run `pip install nlopt` to install this dependency."
+    "Note that we are using NLopt for optimization as it supports better-performing BOBYQA optimizer. \n",
+    "\n",
+    "Run `pip install nlopt` to install this dependency."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9d730369-3d9a-4e0e-bd2b-a81d92baa7b7",
    "metadata": {
     "tags": []
@@ -203,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "55a761e4-2122-4b00-bc1f-39730d6a3dd7",
    "metadata": {
     "tags": []
@@ -230,20 +224,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "86b7ff7f-43f4-4242-95b9-82784f0632a5",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "energy = 0.004135567715736568, Approximation ratio = 0.8050399835268952\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "_, opt_energy = minimize_nlopt(qaoa_obj, x0, p=1, rhobeg=0.01/1)\n",
     "opt_ar = (opt_energy-best_portfolio[1])/(best_portfolio[0]-best_portfolio[1])\n",
@@ -252,20 +238,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "90c5c6af-003c-4724-a943-c747bd24f3c6",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "energy = 0.004135567784198798, Approximation ratio = 0.8050399795047319\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = minimize(qaoa_obj, x0, method='COBYLA', options={'rhobeg':0.001})\n",
     "print(f\"energy = {res.fun}, Approximation ratio = {(res.fun-best_portfolio[1])/(best_portfolio[0]-best_portfolio[1])}\")"
@@ -281,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0c6e7780-0392-4a9f-b0a7-4b23c0af84dc",
    "metadata": {
     "tags": []
@@ -293,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d5fec9f4-09e0-409f-a613-07f23194c94d",
    "metadata": {
     "tags": []
@@ -322,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "bc26bf47-72ce-4944-9a9f-d217e4c77894",
    "metadata": {
     "tags": []
@@ -336,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0c4f35dc-9402-48ce-89ef-c5a80883aaf8",
    "metadata": {
     "tags": []
@@ -351,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8581ac1f-2675-4ccb-b311-ee7e658b2782",
    "metadata": {
     "tags": []
@@ -367,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2ceed19a-9391-4eed-95b9-dbfc3b8d6a9d",
    "metadata": {
     "tags": []
@@ -391,9 +369,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "qokit",
    "language": "python",
-   "name": "python3"
+   "name": "qokit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -405,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
