fixed the order of beta and gamma

--- a/examples/QAOA_LABS_circuit_generation.ipynb
+++ b/examples/QAOA_LABS_circuit_generation.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qc = get_qaoa_circuit(N, terms, beta, gamma, save_statevector=False)"
+    "qc = get_qaoa_circuit(N, terms, gamma, beta, save_statevector=False)"
    ]
   },
   {
