flip gamma beta in qaoa_circuit_labs.py qokit/qaoa_circuit_maxcut.py

--- a/examples/advanced/generate_optimized_circuits_for_Np_experiments.ipynb
+++ b/examples/advanced/generate_optimized_circuits_for_Np_experiments.ipynb
@@ -55,7 +55,7 @@
     "gamma, beta = get_fixed_gamma_beta(d, p)\n",
     "\n",
     "# Get circuit\n",
-    "qc = get_qaoa_circuit(G, beta, gamma, save_statevector=False)\n",
+    "qc = get_qaoa_circuit(G, gamma, beta save_statevector=False)\n",
     "qc.measure_all()"
    ]
   },
