--- a/examples/QAOA_LABS_optimization.ipynb
+++ b/examples/QAOA_LABS_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import qokit\n",
     "import scipy.optimize\n",
     "from qokit import parameter_utils\n",
-    "import qokit.fur "
+    "import qokit.fur \n",
+    "from qokit.qaoa_objective_labs import get_qaoa_labs_objective"
    ]
   },
   {
@@ -27,116 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum p available for N=10 is 8\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>N</th>\n",
-       "      <th>p</th>\n",
-       "      <th>overlap</th>\n",
-       "      <th>gamma</th>\n",
-       "      <th>beta</th>\n",
-       "      <th>merit factor</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.127219</td>\n",
-       "      <td>[0.0788139605]</td>\n",
-       "      <td>[-0.1899602111]</td>\n",
-       "      <td>1.923268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.196232</td>\n",
-       "      <td>[0.06896497310000001, 0.1511922366]</td>\n",
-       "      <td>[-0.1966433649, -0.1328573804]</td>\n",
-       "      <td>2.174876</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.258441</td>\n",
-       "      <td>[0.063816785, 0.1396294913, 0.1538820941]</td>\n",
-       "      <td>[-0.2082662354, -0.1383489014, -0.1215130558]</td>\n",
-       "      <td>2.320238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>10</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.318326</td>\n",
-       "      <td>[0.0655247286, 0.1319443875, 0.1430007569, 0.1...</td>\n",
-       "      <td>[-0.20560510070000002, -0.1459282952, -0.12584...</td>\n",
-       "      <td>2.445458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.362467</td>\n",
-       "      <td>[0.0661013761, 0.1351407309, 0.136539053600000...</td>\n",
-       "      <td>[-0.2261604879, -0.1482192504, -0.1413220406, ...</td>\n",
-       "      <td>2.506400</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     N  p   overlap                                              gamma  \\\n",
-       "35  10  1  0.127219                                     [0.0788139605]   \n",
-       "36  10  2  0.196232                [0.06896497310000001, 0.1511922366]   \n",
-       "37  10  3  0.258441          [0.063816785, 0.1396294913, 0.1538820941]   \n",
-       "38  10  4  0.318326  [0.0655247286, 0.1319443875, 0.1430007569, 0.1...   \n",
-       "39  10  5  0.362467  [0.0661013761, 0.1351407309, 0.136539053600000...   \n",
-       "\n",
-       "                                                 beta  merit factor  \n",
-       "35                                    [-0.1899602111]      1.923268  \n",
-       "36                     [-0.1966433649, -0.1328573804]      2.174876  \n",
-       "37      [-0.2082662354, -0.1383489014, -0.1215130558]      2.320238  \n",
-       "38  [-0.20560510070000002, -0.1459282952, -0.12584...      2.445458  \n",
-       "39  [-0.2261604879, -0.1482192504, -0.1413220406, ...      2.506400  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = 10\n",
     "parameters = parameter_utils.get_best_known_parameters_for_LABS_wrt_overlap(N)\n",
@@ -154,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,29 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "u, v = parameter_utils.to_fourier_basis(gamma, beta)\n",
     "init_u, init_v = parameter_utils.extrapolate_parameters_in_fourier_basis(u, v, p, 1)\n",
     "init_freq = np.hstack([init_u, init_v])\n",
-    "f = qokit.get_qaoa_labs_objective(N, p, parameterization='freq', objective='overlap')"
+    "f = get_qaoa_labs_objective(N, p, parameterization='freq', objective='overlap')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success probability at p=9 before optimization is 0.49333386759027675\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Success probability at p={p} before optimization is {1-f(init_freq)}\")"
    ]
@@ -211,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,20 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success probability at p=9 after optimization is 0.5242896565265064\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "beta, gamma = parameter_utils.from_fourier_basis(res.x[:p], res.x[p:])\n",
-    "f_bg = qokit.get_qaoa_labs_objective(N, p, parameterization='gamma beta', objective='overlap')\n",
+    "gamma, beta = parameter_utils.from_fourier_basis(res.x[:p], res.x[p:])\n",
+    "f_bg = get_qaoa_labs_objective(N, p, parameterization='gamma beta', objective='overlap')\n",
     "\n",
     "print(f'Success probability at p={p} after optimization is {1-f_bg(gamma, beta)}')"
    ]
