--- a/examples/advanced/generate_optimized_circuits_for_Np_experiments.ipynb
+++ b/examples/advanced/generate_optimized_circuits_for_Np_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a04e6095-ce70-4bd9-a984-654c9bfa47c1",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "91ead96a-989f-4803-8424-2c54b6c346cb",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
     "gamma, beta = get_fixed_gamma_beta(d, p)\n",
     "\n",
     "# Get circuit\n",
-    "qc = get_qaoa_circuit(G, gamma, beta save_statevector=False)\n",
+    "qc = get_qaoa_circuit(G, gamma, beta, save_statevector=False)\n",
     "qc.measure_all()"
    ]
   },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "12164562-e3f2-409a-b0b1-cfbcffa96c70",
    "metadata": {
     "tags": []
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4a28f1c4-f06e-44e6-ade1-40b89466f9ca",
    "metadata": {
     "tags": []
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "36410195-8ab3-4987-9d43-97b70351ade2",
    "metadata": {
     "tags": []
@@ -109,20 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ba0b52a2-3db2-4fe5-99c7-c4870697deed",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Approximation ratio: 0.97119140625\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Approximation ratio: {objective_from_counts(counts_qiskit, obj) / optimal_cut}\")"
    ]
@@ -139,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ecf4afec-5504-48ba-9773-d3aadf6767d2",
    "metadata": {
     "tags": []
@@ -154,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3472b902-1ca6-45a7-97a2-39d2c8885028",
    "metadata": {
     "tags": []
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d3ee862d-56d3-4a13-a0c2-a7b11da1dd18",
    "metadata": {
     "tags": []
@@ -174,34 +166,26 @@
    "outputs": [],
    "source": [
     "# objective to optimize\n",
-    "f = get_qaoa_maxcut_objective(N, p, precomputed_cuts=-precomputed_energies)\n",
+    "f = get_qaoa_maxcut_objective(N, p, precomputed_cuts=precomputed_energies)\n",
     "# putting minus in front of gamma since we flipped the sign for minimization\n",
-    "X0 = np.hstack([-np.array(gamma), beta])"
+    "X0 = np.hstack([np.array(gamma), beta])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ef0623ac-ffa4-41f0-8e96-832c2983225f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Approximation ratio before optimization: 0.9584625249938904\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Approximation ratio before optimization: {-f(X0) / optimal_cut}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5ef43616-1b68-4f6f-a42c-3e586ef206f1",
    "metadata": {
     "tags": []
@@ -213,20 +197,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "838cf93c-7880-4921-88ae-d108f89a55d0",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Approximation ratio after optimization: 0.9962760886758121\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Approximation ratio after optimization: {-f(res.x) / optimal_cut}\")"
    ]
@@ -242,9 +218,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py39",
    "language": "python",
-   "name": "python3"
+   "name": "py39"
   },
   "language_info": {
    "codemirror_mode": {
@@ -256,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
