--- a/examples/advanced/compare_maxcut_parameters.ipynb
+++ b/examples/advanced/compare_maxcut_parameters.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f2481f81-c852-4946-b960-fb77efc783fa",
    "metadata": {
     "tags": []
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b1c825bd-e948-4031-be20-ca5c3e8cb1a7",
    "metadata": {
     "tags": []
@@ -48,12 +48,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9b3cead5-3b8c-4d2c-841c-50a0938b1101",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QAOA Approximation Ratio at p = 1\n",
+      "Fixed: 0.8290259646536787\n",
+      "SK: 0.8299811605684914\n",
+      "QAOA Approximation Ratio at p = 2\n",
+      "Fixed: 0.8857658735045127\n",
+      "SK: 0.8901761161536336\n",
+      "QAOA Approximation Ratio at p = 3\n",
+      "Fixed: 0.9078737229797296\n",
+      "SK: 0.9086609501661711\n",
+      "QAOA Approximation Ratio at p = 4\n",
+      "Fixed: 0.928003970532465\n",
+      "SK: 0.9249427207206631\n",
+      "QAOA Approximation Ratio at p = 5\n",
+      "SK: 0.9313863801550161\n",
+      "QAOA Approximation Ratio at p = 6\n",
+      "SK: 0.9328170669710184\n",
+      "QAOA Approximation Ratio at p = 7\n",
+      "SK: 0.9371049287171616\n",
+      "QAOA Approximation Ratio at p = 8\n",
+      "SK: 0.9417709759893482\n",
+      "QAOA Approximation Ratio at p = 9\n",
+      "SK: 0.9474513811476454\n",
+      "QAOA Approximation Ratio at p = 10\n",
+      "SK: 0.9528657135648244\n",
+      "QAOA Approximation Ratio at p = 11\n",
+      "SK: 0.9575901384296022\n",
+      "QAOA Approximation Ratio at p = 12\n",
+      "SK: 0.9608506628877554\n",
+      "QAOA Approximation Ratio at p = 13\n",
+      "SK: 0.9638581316210089\n",
+      "QAOA Approximation Ratio at p = 14\n",
+      "SK: 0.9665209771797871\n",
+      "QAOA Approximation Ratio at p = 15\n",
+      "SK: 0.9688626268503661\n",
+      "QAOA Approximation Ratio at p = 16\n",
+      "SK: 0.9711281110229927\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a random regular graph\n",
     "N = 10\n",
