--- a/examples/advanced/generate_optimized_circuits_for_Np_experiments.ipynb
+++ b/examples/advanced/generate_optimized_circuits_for_Np_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a04e6095-ce70-4bd9-a984-654c9bfa47c1",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "91ead96a-989f-4803-8424-2c54b6c346cb",
    "metadata": {
     "tags": []
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "12164562-e3f2-409a-b0b1-cfbcffa96c70",
    "metadata": {
     "tags": []
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4a28f1c4-f06e-44e6-ade1-40b89466f9ca",
    "metadata": {
     "tags": []
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "36410195-8ab3-4987-9d43-97b70351ade2",
    "metadata": {
     "tags": []
@@ -109,12 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ba0b52a2-3db2-4fe5-99c7-c4870697deed",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximation ratio: 0.96728515625\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Approximation ratio: {objective_from_counts(counts_qiskit, obj) / optimal_cut}\")"
    ]
@@ -131,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ecf4afec-5504-48ba-9773-d3aadf6767d2",
    "metadata": {
     "tags": []
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3472b902-1ca6-45a7-97a2-39d2c8885028",
    "metadata": {
     "tags": []
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d3ee862d-56d3-4a13-a0c2-a7b11da1dd18",
    "metadata": {
     "tags": []
@@ -173,19 +181,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ef0623ac-ffa4-41f0-8e96-832c2983225f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximation ratio before optimization: 0.9675931950044419\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Approximation ratio before optimization: {-f(X0) / optimal_cut}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5ef43616-1b68-4f6f-a42c-3e586ef206f1",
    "metadata": {
     "tags": []
@@ -197,12 +213,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "838cf93c-7880-4921-88ae-d108f89a55d0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximation ratio after optimization: 0.9914728555522948\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Approximation ratio after optimization: {-f(res.x) / optimal_cut}\")"
    ]
