--- a/examples/benchmark_example.ipynb
+++ b/examples/benchmark_example.ipynb
@@ -1,70 +1,212 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1c1a8de1-aa43-4136-9844-8abadf6343dd",
+   "metadata": {},
+   "source": [
+    "Please install QOKit from source. If you have issues with urllib3, downgrade it after QOKit install by running `pip install urllib3==1.26.6`\n",
+    "\n",
+    "First, we check that all the simulators are loaded properly"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "d9a6d070-3524-4fe8-af23-c295751d7145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gpu', 'c', 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qokit.fur import get_available_simulator_names\n",
+    "\n",
+    "print(get_available_simulator_names(\"x\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11678646-6e36-416f-aec6-39b38f1bc02f",
+   "metadata": {},
+   "source": [
+    "The output should be `['gpu', 'c', 'python']`. `'c'` simulator is optional and is not relevant to this benchmark. However, if it's missing, you can compile it manually by running `make -C qokit/fur/c/csim/src/` in the home directory of QOKit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "6d84f2d6-68f2-481c-b1ba-6fcc87b6984e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from tqdm import tqdm\n",
     "import networkx as nx\n",
     "import timeit \n",
     "from qokit.qaoa_objective_labs import get_qaoa_labs_objective\n",
-    "from qokit.qaoa_objective_maxcut import get_qaoa_maxcut_objective"
+    "from qokit.qaoa_objective_maxcut import get_qaoa_maxcut_objective\n",
+    "from qokit.qaoa_objective import get_qaoa_objective"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c0ab1bf-fbf2-4b62-a4d2-998b3002fba4",
+   "metadata": {},
+   "source": [
+    "Note that `f_labs` requires a precomputed diagonal for higher `N`. \n",
+    "You can precompute the diagonal once using \n",
+    "```\n",
+    "from qokit.labs import negative_merit_factor_from_bitstring\n",
+    "ens = precompute_energies(negative_merit_factor_from_bitstring, N)\n",
+    "outpath = f\"../qokit/assets/precomputed_merit_factors/precomputed_energies_{N}.npy\"\n",
+    "np.save(outpath, ens, allow_pickle=False)\n",
+    "```\n",
+    "and saving it on disc under `qokit/assets/precomputed_merit_factors`. Note that precomputation can take a while."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ca9d6329-5078-4a4b-aa58-e7cf0d839d8b",
+   "execution_count": 3,
+   "id": "cc25c2a0-760d-4482-bf4d-19a0dc746def",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N=22\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 64 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "100%|██████████| 10/10 [00:15<00:00,  1.52s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLABS finished in 1.5177 on average, min: 1.5080, max: 1.5263\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:15<00:00,  1.52s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMaxCut finished in 1.5227 on average, min: 1.5157, max: 1.5264\n",
+      "N=24\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [01:06<00:00,  6.61s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLABS finished in 6.6131 on average, min: 6.5902, max: 6.6334\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [01:06<00:00,  6.63s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMaxCut finished in 6.6295 on average, min: 6.6214, max: 6.6379\n",
+      "N=26\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [04:45<00:00, 28.57s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLABS finished in 28.5703 on average, min: 28.5505, max: 28.5849\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [04:45<00:00, 28.52s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMaxCut finished in 28.5143 on average, min: 28.5032, max: 28.5251\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# number of qubits\n",
     "# Goal is to improve performance for N > 20\n",
-    "N = 14\n",
-    "# QAOA depth\n",
-    "# Goal is to improve performance for p >= 100\n",
-    "p = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7af4278a-75c2-4de1-baaf-92e41a3edcbf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "theta = np.random.uniform(0,1,2*p)\n",
-    "G = nx.random_regular_graph(3, N)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c573d648-e114-4b8b-9209-7ce0eea8cbe3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function initialization can take a long time\n",
-    "f_labs = get_qaoa_labs_objective(N, p)\n",
-    "f_maxcut = get_qaoa_maxcut_objective(N, p, G)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "439dc9fe-4ef4-4a3c-a186-b2d42914f39c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function evaluation must be fast\n",
-    "for f in [f_labs, f_maxcut]:\n",
-    "    start = timeit.default_timer()\n",
-    "    f(theta)\n",
-    "    end = timeit.default_timer()\n",
-    "    print(f\"Finished in {end-start:.4f} seconds\")"
+    "for N in [22, 24, 26]:\n",
+    "    print(f\"N={N}\")\n",
+    "    # QAOA depth\n",
+    "    # Goal is to improve performance for p >= 100\n",
+    "    p = 100\n",
+    "\n",
+    "    theta = np.random.uniform(0,1,2*p)\n",
+    "    G = nx.random_regular_graph(3, N, seed=42)\n",
+    "\n",
+    "    # Function initialization need not be fast\n",
+    "    f_maxcut = get_qaoa_maxcut_objective(N, p, G)\n",
+    "    f_labs = get_qaoa_labs_objective(N, p)\n",
+    "\n",
+    "    # Function evaluation must be fast\n",
+    "    for f, label in [(f_labs, \"LABS\"), (f_maxcut, \"MaxCut\")]:\n",
+    "        f(theta) # do not count the first evaluation\n",
+    "        times = []\n",
+    "        for _ in tqdm(range(10)):\n",
+    "            start = timeit.default_timer()\n",
+    "            f(theta)\n",
+    "            end = timeit.default_timer()\n",
+    "            times.append(end-start)\n",
+    "        print(f\"\\t{label} finished in {np.mean(times):.4f} on average, min: {np.min(times):.4f}, max: {np.max(times):.4f}\")"
    ]
   },
   {
@@ -72,23 +214,35 @@
    "id": "b5abbd11-55ee-4ba3-b685-482e90180d2e",
    "metadata": {},
    "source": [
-    "The objective is to reduce the time to evaluate `f_labs(theta)` and `f_maxcut(theta)` when the number of evaluations is large (> 1000). Note that the above cell evaluates the objective only once."
+    "The goal is to reduce the time to evaluate `f_labs(theta)` and `f_maxcut(theta)`. Typically, the number of evaluations is large (> 1000).\n",
+    "\n",
+    "This is what I measured on `g4dn.2xlarge` as of `944cbe93`:\n",
+    "\n",
+    "```\n",
+    "N=22\n",
+    "\tLABS finished in 1.5177 on average, min: 1.5080, max: 1.5263\n",
+    "\tMaxCut finished in 1.5227 on average, min: 1.5157, max: 1.5264\n",
+    "N=24\n",
+    "\tLABS finished in 6.6131 on average, min: 6.5902, max: 6.6334\n",
+    "\tMaxCut finished in 6.6295 on average, min: 6.6214, max: 6.6379\n",
+    "N=26\n",
+    "\tLABS finished in 28.5703 on average, min: 28.5505, max: 28.5849\n",
+    "\tMaxCut finished in 28.5143 on average, min: 28.5032, max: 28.5251\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f61d09e-74ec-4c9a-b2dd-0fe61213e2e2",
+   "cell_type": "markdown",
+   "id": "9fb870a1-9239-46eb-9d96-be02af4710d4",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py39",
    "language": "python",
-   "name": "python3"
+   "name": "py39"
   },
   "language_info": {
    "codemirror_mode": {
@@ -100,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
