--- a/grips/Predict(1)_kanon_0702.ipynb
+++ b/grips/Predict(1)_kanon_0702.ipynb
@@ -1094,18 +1094,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As N increases, the RunTime (execution time) tends to increase exponentially. \n",
+    "As N increases, the runtime tends to exhibit an exponential growth trend.\n",
     "\n",
-    "When P is larger, the approximated values get closer to an exponential function.\n",
+    "Increasing P causes the approximated value to approach an exponential form.\n",
     "\n",
-    "Furthermore, comparing small and large P values, when P is larger, the RunTime increases even more as N gets larger.\n",
-    "\n",
+    "Furthermore, comparing cases of small and large P, larger P tends to show a trend where \"runtime increases more significantly as N becomes larger.\"\n",
     "\n",
     "Nが増加するにつれて、RunTime（実行時間）は指数関数的に増加する傾向がある。\n",
     "\n",
-    "Pを大きくすると、近似した値が指数関数により近づく。\n",
+    "Pを大きくすると、近似した値が指数関数の形に近づく。\n",
     "\n",
-    "さらには、Pが小さい時と大きい時を比較すると、Pが大きいほうが「Nが大きくなるにつれてRunTimeもさらに大きく増加する」。"
+    "さらには、Pが小さい時と大きい時を比較すると、Pが大きいほうが「Nが大きくなるにつれてRunTimeもさらに大きく増加する傾向」がある。"
    ]
   }
  ],
