--- a/grips/Predict(2)_kanon_0703.ipynb
+++ b/grips/Predict(2)_kanon_0703.ipynb
@@ -624,6 +624,15 @@
     "# フィッティング結果のパラメータ\n",
     "print(\"Fitted parameters (a, b):\", params)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's understood that the graph will be upward sloping, but predicting it using an approximation function seems challenging.\n",
+    "\n",
+    "右肩上がりのグラフになることはわかっても、近似関数を使って予測することは難しそうである。"
+   ]
   }
  ],
  "metadata": {
