--- a/grips/QAOA-example1.ipynb
+++ b/grips/QAOA-example1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List of citations of data needed for QAOA simulation （function definitions）\n",
+    "\n",
+    "QAOAのシミュレーションに必要なデータの引用方法（関数の定義）一覧"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
