Committed changes before switching branches

--- a/grips/QAOA_mixers.ipynb
+++ b/grips/QAOA_mixers.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import typing\n",
     "import qokit\n",
     "import numpy as np\n",
+    "import networkx as nx\n",
     "import scipy\n",
     "import time\n",
-    "from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
+    "from matplotlib import pyplot as plt\n",
     "from qokit.fur.qaoa_simulator_base import QAOAFastSimulatorBase, TermsType\n",
+    "import qokit.maxcut as mc\n",
+    "from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
     "\n",
     "\"\"\"\n",
     "This will serve as a module for QAOA simulation functionalities. \n",
@@ -22,7 +25,6 @@
     "\n",
     "Most other functions are written only for the purpose of QAOA_run to use them. \n",
     "\"\"\"\n",
-    "\n",
     "\n",
     "def get_simulator(N: int, terms: TermsType, sim_or_none: QAOAFastSimulatorBase | None = None, simulator_name: str = \"auto\") -> QAOAFastSimulatorBase:\n",
     "    if sim_or_none is None:\n",
@@ -76,25 +78,28 @@
     "    simulator, result = get_simulator_and_result(N, terms, gamma, beta, sim, result, simulator_name=simulator_name)\n",
     "    return simulator.get_overlap(result, preserve_state=True)\n",
     "\n",
-    "\n",
-    "def inverse_objective_function(\n",
-    "    ising_model: TermsType, N: int, p: int, mixer: str, expectations: list[np.ndarray] | None, overlaps: list[np.ndarray] | None, simulator_name: str = \"auto\"\n",
+    "# Evaluates the objective function, and if expectations or measurements is passed in, appends to them\n",
+    "def inv_max_cut_objective(\n",
+    "    N: int, p: int, terms: TermsType, expectations: list[float] | None = None, measurements: list[float] | None = None, sim: QAOAFastSimulatorBase | None = None\n",
     ") -> typing.Callable:\n",
-    "    def inverse_objective(*args) -> float:\n",
+    "    def f(*args) -> float:\n",
     "        gamma, beta = args[0][:p], args[0][p:]\n",
-    "        simulator, result = get_simulator_and_result(N, ising_model, gamma, beta, simulator_name=simulator_name)\n",
-    "        expectation = get_expectation(N, ising_model, gamma, beta, simulator, result, simulator_name=simulator_name)\n",
     "        current_time = time.time()\n",
+    "        simulator = get_simulator(N, terms, sim)\n",
+    "        probs = get_probabilities(N, terms, gamma, beta, sim)\n",
+    "        costs = simulator.get_cost_diagonal()\n",
+    "        expectation = np.dot(costs, probs)\n",
     "\n",
-    "        if expectations is not None:\n",
+    "        if expectations != None:\n",
     "            expectations.append((current_time, expectation))\n",
     "\n",
-    "        if overlaps is not None:\n",
-    "            overlaps.append((current_time, get_overlap(N, ising_model, gamma, beta, simulator, result, simulator_name=simulator_name)))\n",
+    "        if measurements != None:\n",
+    "            measurement = max(np.random.choice(costs, 10, p=probs))\n",
+    "            measurements.append((current_time, measurement))\n",
     "\n",
     "        return -expectation\n",
     "\n",
-    "    return inverse_objective\n",
+    "    return f\n",
     "\n",
     "def QAOA_run(\n",
     "    ising_model: TermsType,\n",
@@ -104,7 +109,9 @@
     "    init_beta: np.ndarray,\n",
     "    optimizer_method: str = \"COBYLA\",\n",
     "    optimizer_options: dict | None = None,\n",
-    "    mixer: str = \"y\",  # Using a different mixer\n",
+    "    mixer: str = \"x\",  \n",
+    "    # If mixer == 'x', then uses the default Pauli X as the mixer\n",
+    "    # If mixer == 'xy', then uses the ring-XY as the mixer\n",
     "    expectations: list[np.ndarray] | None = None,\n",
     "    overlaps: list[np.ndarray] | None = None,\n",
     "    simulator_name: str = \"auto\",\n",
@@ -132,25 +139,6 @@
     "        overlaps = list(map(make_time_relative, overlaps))\n",
     "\n",
     "    gamma, beta = result.x[:p], result.x[p:]\n",
-    "\n",
-    "    ##############################################################################\n",
-    "\n",
-    "    # Select appropriate mixer circuit based on mixer type\n",
-    "    if mixer == \"x\":\n",
-    "        mixer_circuit = create_x_mixer_circuit(N, beta)\n",
-    "    elif mixer == \"y\":\n",
-    "        mixer_circuit = create_y_mixer_circuit(N, beta)\n",
-    "    elif mixer == \"xy\":\n",
-    "        mixer_circuit = create_xy_mixer_circuit(N, beta)\n",
-    "    else:\n",
-    "        raise ValueError(f\"Mixer type '{mixer}' is not supported.\")\n",
-    "\n",
-    "    # Perform QAOA with the selected mixer circuit\n",
-    "    qaoa_circuit = get_qaoa_circuit(ising_model, gamma, mixer_circuit, N)\n",
-    "    final_state = run_qaoa(qaoa_circuit, simulator_name=simulator_name)\n",
-    "\n",
-    "    ##############################################################################\n",
-    "\n",
     "    return {\n",
     "        \"gamma\": gamma,\n",
     "        \"beta\": beta,\n",
@@ -161,18 +149,60 @@
     "        \"num_QAOA_calls\": result.nfev,\n",
     "        \"classical_opt_success\": result.success,\n",
     "        \"scipy_opt_message\": result.message\n",
-    "    }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "##############################################################################\n",
-    "def create_y_mixer_circuit(N: int, beta: np.ndarray) -> QuantumCircuit:\n",
-    "    qr = QuantumRegister(N)\n",
-    "    mixer_circuit = QuantumCircuit(qr)\n",
+    "def plot_expectation(expectations: list[float], N: int, p: int, start_time: float) -> None:\n",
+    "    def make_time_relative(input: tuple[float, float]) -> tuple[float, float]:\n",
+    "        time, expectation = input\n",
+    "        return (time - start_time, expectation)\n",
     "\n",
-    "    for i in range(N):\n",
-    "        mixer_circuit.ry(beta[i], qr[i])\n",
+    "    time_relative_expectations = list(map(make_time_relative, expectations))\n",
+    "    plt.scatter(*zip(*time_relative_expectations))\n",
+    "    plt.title(f\"MaxCut (N = {N}, p = {p})\")\n",
+    "    plt.xlabel(\"Time (seconds)\")\n",
+    "    plt.ylabel(\"QAOA Expectation\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generates a random graph with N vertices and runs MaxCut QAOA on this graph, plotting results\n",
+    "def run_experiment(seed: int, N: int, p: int) -> None:\n",
+    "    np.random.seed(seed)\n",
+    "    G = nx.erdos_renyi_graph(N, 0.5, seed=seed)  # Random graph w/ 0.5 edge probability\n",
+    "    terms = mc.get_maxcut_terms(G)\n",
+    "    sim = get_simulator(N, terms)\n",
+    "    expectations = []\n",
+    "    measurements = []\n",
     "\n",
-    "    return mixer_circuit\n",
-    "##############################################################################"
+    "    # Compute and print solution by brute force\n",
+    "    solution, solution_index = optimal_solution_with_index(sim)\n",
+    "    print(f\"Optimal Solution: {solution_index:0{N}b} - {solution}\")\n",
+    "    vert_colors, edge_colors = compute_graph_colors(G, solution_index)\n",
+    "\n",
+    "    # Random starting parameters\n",
+    "    init_gamma, init_beta = np.random.rand(2, p)\n",
+    "    print_result(N, terms, init_gamma, init_beta, \"Initial \")\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    # If you don't want expectation and measurement plots, do not pass in parameters!\n",
+    "    gamma, beta = optimize(N, terms, init_gamma, init_beta, expectations, measurements, sim)\n",
+    "    end_time = time.time()\n",
+    "    print(f\"Time to optimize: {end_time - start_time} seconds\\n\")\n",
+    "    plot_expectation(expectations, N, p, start_time)"
    ]
   }
  ],
@@ -192,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
