--- a/grips/data_extractor_plotter.ipynb
+++ b/grips/data_extractor_plotter.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "source": [
     "# Expectation\n",
-    "Given the results I have seen, a ribbon plot would be good for expectation."
+    "Given the results I have seen, a ribbon plot might be good for expectation."
    ]
   },
   {
@@ -151,7 +151,7 @@
     "expectation_mins = np.min(expectations, axis=0)\n",
     "expectation_maxs = np.max(expectations, axis=0)\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(dpi=1200)\n",
     "\n",
     "# Plot the ribbon\n",
     "ax.fill_between(N_range, expectation_mins, expectation_maxs, color='skyblue', alpha=0.5, label='Expectation Range')\n",
@@ -163,6 +163,53 @@
     "plt.title('Expectation vs Problem Size (and # QAOA Layers)')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Expectation 2\n",
+    "Maybe the ribbon plot isn't so good, and it's better to just plot many lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "#%matplotlib inline\n",
+    "%matplotlib widget\n",
+    "\n",
+    "# Grab data from saved files\n",
+    "return_dict = grab_data()\n",
+    "N_range = return_dict[\"N_mesh\"]\n",
+    "p_range = return_dict[\"p_mesh\"]\n",
+    "\n",
+    "matrix = return_dict[\"expectation\"]\n",
+    "#print(matrix.shape)\n",
+    "\n",
+    "cmap = plt.get_cmap('viridis')\n",
+    "\n",
+    "#cmap = plt.get_cmap('viridis')\n",
+    "#colors = [cmap(i) for i in np.linspace(0, 1, len(N_range))]\n",
+    "# Create a figure\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_xlabel(\"Expectation\")\n",
+    "ax.set_ylabel('QAOA Depth (p)')\n",
+    "for (i, N) in enumerate(range(5)):\n",
+    "#for (i, N) in enumerate(N_range):\n",
+    "    c_index = -1 + (i / len(N_range))\n",
+    "    c_index = 0 if (i < 5) else 1_000_000\n",
+    "    color = \"red\" if (i < 5) else \"blue\"\n",
+    "    #print(color)\n",
+    "    #print(c_index)\n",
+    "    print(matrix[:,N])\n",
+    "    ax.plot(p_range, matrix[:,N])\n",
+    "\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -205,6 +252,60 @@
     "plt.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Number of QAOA Calls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Grab data from saved files\n",
+    "return_dict = grab_data()\n",
+    "N_mesh = return_dict[\"N_mesh\"]\n",
+    "p_mesh = return_dict[\"p_mesh\"]\n",
+    "\n",
+    "\n",
+    "z_matrix = return_dict[\"num_QAOA_calls\"]\n",
+    "\n",
+    "# Create a figure\n",
+    "fig = plt.figure(dpi=1200)\n",
+    "# Add 3D subplot\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "# Plot the surface\n",
+    "surf = ax.plot_surface(N_mesh, p_mesh, z_matrix, cmap='viridis')\n",
+    "# Add a color bar which maps values to colors\n",
+    "fig.colorbar(surf)\n",
+    "# Add labels\n",
+    "ax.set_xlabel('Problem Size (N)', fontsize=14, labelpad=5)\n",
+    "ax.set_ylabel('QAOA Depth (p)', fontsize=14, labelpad=5)\n",
+    "ax.set_zlabel(\"# QAOA Calls\", fontsize=14, labelpad=10)\n",
+    "ax.view_init(elev=30, azim=230)  # Elevation angle: 30 degrees, Azimuthal angle: 60 degrees\n",
+    "ax.set_xticks(range(0, 21, 5))\n",
+    "ax.set_yticks(range(0, 21, 5))\n",
+    "# Show plot\n",
+    "ax.set_box_aspect(aspect=None, zoom=0.8)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
