--- a/examples/benchmark_example.ipynb
+++ b/examples/benchmark_example.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d9a6d070-3524-4fe8-af23-c295751d7145",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['gpu', 'c', 'python']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qokit.fur import get_available_simulator_names\n",
     "\n",
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6d84f2d6-68f2-481c-b1ba-6fcc87b6984e",
    "metadata": {},
    "outputs": [],
@@ -72,132 +64,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cc25c2a0-760d-4482-bf4d-19a0dc746def",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N=22\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 64 will likely result in GPU under-utilization due to low occupancy.\n",
-      "  warn(NumbaPerformanceWarning(msg))\n",
-      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
-      "  warn(NumbaPerformanceWarning(msg))\n",
-      "100%|██████████| 10/10 [00:15<00:00,  1.52s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tLABS finished in 1.5177 on average, min: 1.5080, max: 1.5263\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:15<00:00,  1.52s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tMaxCut finished in 1.5227 on average, min: 1.5157, max: 1.5264\n",
-      "N=24\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [01:06<00:00,  6.61s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tLABS finished in 6.6131 on average, min: 6.5902, max: 6.6334\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [01:06<00:00,  6.63s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tMaxCut finished in 6.6295 on average, min: 6.6214, max: 6.6379\n",
-      "N=26\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [04:45<00:00, 28.57s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tLABS finished in 28.5703 on average, min: 28.5505, max: 28.5849\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [04:45<00:00, 28.52s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tMaxCut finished in 28.5143 on average, min: 28.5032, max: 28.5251\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# number of qubits\n",
-    "# Goal is to improve performance for N > 20\n",
     "for N in [22, 24, 26]:\n",
     "    print(f\"N={N}\")\n",
     "    # QAOA depth\n",
-    "    # Goal is to improve performance for p >= 100\n",
     "    p = 100\n",
     "\n",
     "    theta = np.random.uniform(0,1,2*p)\n",
     "    G = nx.random_regular_graph(3, N, seed=42)\n",
     "\n",
-    "    # Function initialization need not be fast\n",
+    "    # Function initialization may not be fast\n",
     "    f_maxcut = get_qaoa_maxcut_objective(N, p, G)\n",
     "    f_labs = get_qaoa_labs_objective(N, p)\n",
     "\n",
-    "    # Function evaluation must be fast\n",
+    "    # Function evaluation is fast\n",
     "    for f, label in [(f_labs, \"LABS\"), (f_maxcut, \"MaxCut\")]:\n",
     "        f(theta) # do not count the first evaluation\n",
     "        times = []\n",
