--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d9a6d070-3524-4fe8-af23-c295751d7145",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['gpu', 'python']\n"
+     ]
+    }
+   ],
    "source": [
     "from qokit.fur import get_available_simulator_names\n",
     "\n",
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6d84f2d6-68f2-481c-b1ba-6fcc87b6984e",
    "metadata": {},
    "outputs": [],
@@ -64,10 +72,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cc25c2a0-760d-4482-bf4d-19a0dc746def",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N=24\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 64 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "100%|██████████| 10/10 [00:00<00:00, 12.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLABS finished in 0.0821 on average, min: 0.0806, max: 0.0885\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 12.87it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMaxCut finished in 0.0773 on average, min: 0.0759, max: 0.0836\n",
+      "N=26\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:03<00:00,  2.84it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLABS finished in 0.3509 on average, min: 0.3481, max: 0.3601\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:03<00:00,  3.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMaxCut finished in 0.3308 on average, min: 0.3289, max: 0.3393\n",
+      "N=28\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:13<00:00,  1.39s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLABS finished in 1.3889 on average, min: 1.3856, max: 1.3953\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:13<00:00,  1.31s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMaxCut finished in 1.3112 on average, min: 1.3088, max: 1.3201\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# number of qubits\n",
     "for N in [24, 26, 28]:\n",
